objects/niq__Collateral_Mapping__c.object
<CustomObject>
    <description>This object stores mappings that associate custom collateral types to the standard collateral types expected by Insights.</description>
    <fields>
        <fullName>niq__Custom_Collateral_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this lookup field with a custom collateral type. By default, the value is blank.</description>
        <inlineHelpText>Select a custom collateral type to map to a collateral type from the prediction.</inlineHelpText>
        <label>Custom Collateral Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral Mappings</relationshipLabel>
        <relationshipName>Collateral_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Prediction_Collateral_Type__c</fullName>
        <description>Administrators populate this picklist field with a standard collateral type from the prediction. By default, the value is blank.</description>
        <inlineHelpText>Select a collateral type from the prediction to map to a custom collateral type.</inlineHelpText>
        <label>Prediction Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Single-Family</fullName>
                </value>
                <value>
                    <fullName>Residential Condo</fullName>
                </value>
                <value>
                    <fullName>Residential Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Residential Lot/Land</fullName>
                </value>
                <value>
                    <fullName>New Car</fullName>
                </value>
                <value>
                    <fullName>Used Car</fullName>
                </value>
                <value>
                    <fullName>Other Auto - RV, Boat, Etc.</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Other CRE</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Commercial Lot/Land</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Collateral Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>